--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -25,7 +25,7 @@ browse-buttons: true # true/false, adds previous/next arrows to item pages
 #
 subjects-fields: noise;traffic;xdoor;seats;tables # set the field to be featured in the cloud (if left blank, none will be generated)
 subjects-min: 1 # min size for subject cloud, too many terms = slow load time!
-subjects-stopwords: # boxers;boxing;boxer # set of subjects separated by ;, e.g. boxers;boxing
+subjects-stopwords: no seats;no tables # boxers;boxing;boxer # set of subjects separated by ;, e.g. boxers;boxing
 
 ##########
 # LOCATIONS PAGE
@@ -38,9 +38,9 @@ locations-stopwords: # set of subjects separated by ; that will be removed from 
 # MAP PAGE
 #
 # see _data/map-config.csv for field display options
-latitude: 38.98599 #to determine center of map
-longitude: -76.94248 #to determine center of map
-zoom-level: 15 # zoom level for map 
+latitude: 38.98432 #to determine center of map
+longitude: -76.93909 #to determine center of map
+zoom-level: 16 # zoom level for map 
 map-base: Esri_WorldStreetMap # set default base map, choose from: Esri_WorldStreetMap, Esri_NatGeoWorldMap, Esri_WorldImagery
 map-search: true # true/false, not suggested with large collections
 map-search-fuzziness: 0.35 # fuzzy search range from 1 = anything to 0 = exact match only
