--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,12 @@ source-code: https://bodarnn.github.io/hangouts-at-um
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Hangouts at UM
+title: Hangouts at the University of Maryland
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: Find a place to HUM
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "A catalog of places to hang out at the University of Maryland"
+description: "A collaborative catalog of places to hang out at the University of Maryland"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Bodarnn
 
