--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@
 url: https://bodarnn.github.io 
 # baseurl is path to location on the domain if necessary e.g. /digital/hjccc
 # on GitHub Pages it is your github repository's name prefixed with a /
-baseurl: /hangouts-at-um
+baseurl: /hum
 # location of code, the full url to your github repository
-source-code: https://bodarnn.github.io/hangouts-at-um
+source-code: https://bodarnn.github.io/hum/
 
 ##########
 # SITE SETTINGS
